--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "^1.11",
-    "bootstrap": "^3.3"
+    "bootstrap": "^3.3",
+    "backbone": "1.3.2"
   }
 }
