--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "Gruntfile.js",
   "author": "Dmytro Sokil <dmytro.sokil@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
-    "grunt-contrib-uglify": "0.*",
-    "grunt-contrib-jshint": "0.*",
-    "grunt-contrib-cssmin": "0.*",
-    "grunt-contrib-less": "1.*",
+    "autoprefixer": "~6.0.3",
+    "backbone": "1.3.2",
+    "bootstrap": "^3.3",
+    "grunt": "^1.0.2",
     "grunt-contrib-copy": "0.*",
-    "grunt-newer": "1.*",
+    "grunt-contrib-cssmin": "0.*",
+    "grunt-contrib-jshint": "0.*",
+    "grunt-contrib-less": "1.*",
+    "grunt-contrib-uglify": "0.*",
     "grunt-contrib-watch": "0.6.1",
-    "grunt-spritesmith": "~5.1.4",
+    "grunt-newer": "1.*",
     "grunt-postcss": "~0.4.0",
-    "autoprefixer": "~6.0.3"
+    "grunt-spritesmith": "~5.1.4",
+    "jquery": "^1.11"
   }
 }
