docker and sample

--- a/configs/nginx.prod.sample.conf
+++ b/configs/nginx.prod.sample.conf
@@ -1,12 +1,12 @@
 server
 {
 	listen 80;
-	server_name photoGallery.com;
+	server_name photogallery.com;
 
 	error_log off;
 	access_log off;
   
-	root /var/www/photoGallery/public;
+	root /var/www/photogallery/public;
 
 	gzip on;
     gzip_types application/x-javascript application/javascript text/javascript text/css;
@@ -37,7 +37,7 @@ server
 	location /
 	{
 	    if ($host != 'photoGallery.com') {
-            rewrite ^/(.*)$ http://photoGallery.com/$1 permanent;
+            rewrite ^/(.*)$ http://photogallery.com/$1 permanent;
 	    }
 
 	    try_files $uri @bootstrap;
